# ai-engineer

./: .gitignore  Makefile  notes.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/app/: main.py  playground.py  settings.py  tools.md
src/app/agent_workflows/: agent_with_custom_validation.py  agent_with_guardrails.py  basic_agent.py  planner_agent.py  research_agent.py  simple_agent_collab.py
src/app/agents/: main.py  simple_agent_collab.py
src/app/ai_researcher/: agent_name_enum.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  ui.py  writer_agent.py
src/app/autogen/: agent_with_llm.py  ex1.py  ex2.py  ex3.py  notes.md  simple_agent.py
src/app/autogen/agent_creator/: agent.py  creator.py  main.py  message.py
src/app/career_ego/: __init__.py
src/app/crew_ai/coder/output/: code_and_output.txt
src/app/crew_ai/coder/src/coder/: crew.py  main.py
src/app/crew_ai/debate/: Makefile  pyproject.toml
src/app/crew_ai/debate/output/: decide.md  oppose.md  propose.md
src/app/crew_ai/debate/src/debate/: crew.py  main.py
src/app/crew_ai/eng_team/: pyproject.toml
src/app/crew_ai/eng_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
src/app/crew_ai/financial_researcher/output/: report.md
src/app/crew_ai/stock_picker/output/: trending_companies.json  trending_companies_research.json
src/app/foundation/: extra.py  main.py  summary.txt
src/app/langchain/: main.py  sql.py
src/app/langgraph/examples/: chatbot_with_tools.py  ex_1.py  ex_2.py  ex_3.py  example_3.py  example_4.py
src/app/langgraph/sidekick/: app.py  sidekick.py  tools.py
(+9 files in other folders)
