[project]
name = "ai-engineer"
version = "0.1.0"
description = "ai-engineering apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=1.6.1",
    "gradio>=6.5.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "openai-agents>=0.8.3",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.7.0",
    "requests>=2.32.5",
]

